# ChangeLog for app-emacs/whine
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Nov 2007; Ulrich Mueller <ulm@gentoo.org> whine-19880922.ebuild:
  Add ~amd64 keyword.

  19 Nov 2007; Ulrich Mueller <ulm@gentoo.org>
  -files/whine-19880922-gentoo.patch, +files/whine-gentoo.patch,
  +files/whine-repair-keysequences.patch, whine-19880922.ebuild:
  Add patch to replace whine's command redefinitions by a hook function
  in post-command-hook.

  18 Nov 2007; Ulrich Mueller <ulm@gentoo.org>
  files/whine-19880922-gentoo.patch:
  Restore broken keybindings; hopefully this is close to the original.

  16 Sep 2007; Ulrich Mueller <ulm@gentoo.org>
  +files/whine-19880922-gentoo.patch, +files/50whine-gentoo.el,
  +metadata.xml, +whine-19880922.ebuild:
  Initial import, Emacs complaint generator by Bard Bloom. Ebuild contributed
  by me.
