@@ -1,7 +1,7 @@
 AUX 50whine-gentoo.el 285 RMD160 a5a808f1a434bfa7e1694635cbc644a3c6bc964b SHA1 26a33589a1092975bf7fb6f4b7aae66c21bbcd67 SHA256 7e2c46a13c54a42d5f8475edd02d718c0846d66e70006b705b57d48087c24cf7
-AUX whine-gentoo.patch 3189 RMD160 b94042187d7d871a58f35d253a264e140d061c40 SHA1 3aa9a4caa66632ff4e2752b358b7d8796cbd6d89 SHA256 3ebc112ebb2c9780723c570f9307289d069c735f67b8164395fe4e0496bab957
-AUX whine-repair-keysequences.patch 4084 RMD160 e8cb9d0f5d08cf3f0c0b80aa3bd92ddb4c682ecc SHA1 73628ec47d1785dc3c8b66b4caae3696a05a5bfa SHA256 1b3d96cbbf512dc901fe4f96c7f18fe5620687aafb0e0966d46a4b03f83368ca
+AUX whine-gentoo.patch 3674 RMD160 3f8c6399b5cf0aeee465bffb00cf5e244e00123d SHA1 8cab8741127dc35e909958e7916501a43920a1c6 SHA256 4369ecee39a512202a6c0ada48d5d9246c136c2636c4b12462c603251a94f6d5
+AUX whine-repair-keysequences.patch 4054 RMD160 9b16eeddf35b6d039b4a0b6cba81420ec0ad4477 SHA1 8eb17e8bc734826031c29ec198353749a916c50d SHA256 fc458b368f5b65a429cab9574506cfc2b7ccf5a644b9140842d4b33246c2dfed
 DIST whine-19880922.el.bz2 4116 RMD160 c6f68ee23a689894bfa645be9bb1a176990c3bdc SHA1 2f6c4d9d232d31130a360e3ce539dcac968b9594 SHA256 4cf117f453d1e5d526303c5b648594a148e030b46a27ce71d05f0c6255a38dcb
-EBUILD whine-19880922.ebuild 575 RMD160 f7f66a4335c23d68b8f17e875f23ff048f83acc6 SHA1 a80bba7a8a78698f41c74061995df29f98190702 SHA256 9fae6c88f99ebec16796fe6787e39d0cfcdf102a1787bb94ba0c3fab44941660
-MISC ChangeLog 879 RMD160 cb69cf45893460d74d3b4e48d3f5cea63fc3a54d SHA1 20a7e66140e62fe653ee54ae0936ba69cd2ad398 SHA256 45901d7359a2b44ecbb1da7b1866144e995f4cfde283b80719a2d69b627fe94e
+EBUILD whine-19880922-r1.ebuild 575 RMD160 f7f66a4335c23d68b8f17e875f23ff048f83acc6 SHA1 a80bba7a8a78698f41c74061995df29f98190702 SHA256 9fae6c88f99ebec16796fe6787e39d0cfcdf102a1787bb94ba0c3fab44941660
+MISC ChangeLog 1147 RMD160 f84249239bc40a5e8f6ab057914f732623c5846f SHA1 41d8a893710a4596f0fd4327244562b63f9ab3dc SHA256 c900d133ff5cf22f9708b7bfbbcb12a713a2f097c53de9110bc78847d5d1eb3a
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
