@@ -62,8 +62,7 @@ broken key sequences, hopefully it is close to the original. - ulm
                         '("It's off to the beginnings of the earth!")))
 -  (whine "$" insult-word)
 +  (whine "\M-$" insult-word)
--  (whine " " insult-word)
-+  (whine "\M- " insult-word)
+   (whine " " insult-word)
 -  (whine "" whine-insults)
 -  (whine "b" whine-insults)
 -  (whine "f" whine-insults)
